--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -1,7 +1,8 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
+  margin: 1px;
+  width: 100%;
+  height: 100%;
   padding: 2rem;
 }
